--- a/index.html
+++ b/index.html
@@ -193,8 +193,13 @@
             color: #6b7280;
         }
         .login-brand {
-  text-align: center;
-  margin-bottom: 2.5rem;
+ .login-button {
+  padding: 0.65rem;
+  font-size: 0.9rem;
+  letter-spacing: 0.12em;
+  border-radius: 999px;
+  background: linear-gradient(135deg, #0ea5e9, #22d3ee);
+  color: #020617;
 }
 
 .brand-line-1 {
@@ -242,7 +247,7 @@
                 <!-- Username Field -->
                 <div>
                     <label for="username" class="block text-sm font-medium text-gray-300 mb-2">
-                        Username / Expert ID
+                        Username
                     </label>
                     <input 
                         type="text" 
@@ -273,23 +278,13 @@
 
                 <!-- User Type Selection -->
                 <div>
-                    <label class="block text-sm font-medium text-gray-300 mb-3">
-                        Access Level
-                    </label>
-                    <div class="space-y-3">
-                        <label class="flex items-center space-x-3 cursor-pointer">
-                            <input type="radio" name="userType" value="expert" class="radio-custom" checked>
-                            <span class="text-gray-300">🔧 Expert / Technician</span>
-                        </label>
-                        <label class="flex items-center space-x-3 cursor-pointer">
-                            <input type="radio" name="userType" value="customer" class="radio-custom">
-                            <span class="text-gray-300">🏭 Customer / Operator</span>
-                        </label>
-                        <label class="flex items-center space-x-3 cursor-pointer">
-                            <input type="radio" name="userType" value="manager" class="radio-custom">
-                            <span class="text-gray-300">📊 Manager / Admin</span>
-                        </label>
-                    </div>
+                  <label>Access Level</label>
+<select id="user-type">
+  <option value="expert">Expert</option>
+  <option value="service">Service Engineer</option>
+  <option value="manager">Manager</option>
+  <option value="rnd">R&D</option>
+</select>
                 </div>
 
                 <!-- Submit Button -->
@@ -297,22 +292,14 @@
                     type="submit" 
                     class="btn-primary w-full py-4 px-6 rounded-lg text-white font-bold text-lg shadow-lg"
                 >
-                    🔐 ACCESS SYSTEM
+                    ACCESS SYSTEM
                 </button>
             </form>
-
-            <!-- Demo Credentials -->
-            <div class="mt-6 pt-6 border-t border-gray-700">
-                <p class="text-xs text-gray-400 text-center">
-                    🔑 Demo Access: <strong class="text-blue-400">Expert</strong> / Code: <strong class="text-blue-400">Landa123456</strong>
-                </p>
-            </div>
-        </div>
 
         <!-- Footer -->
         <div class="text-center mt-8">
             <p class="text-gray-500 text-sm">
-                © 2024 Landa Digital Printing | Nanography® Technology | AI-Powered Support System
+                © 2025 Landa Digital Printing | Nanography® Technology | AI-Powered Support System
             </p>
         </div>
     </div>
@@ -321,7 +308,7 @@
     <div id="loading-overlay" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
         <div class="glass-card rounded-lg p-8 text-center">
             <div class="animate-spin rounded-full h-12 w-12 border-b-2 border-blue-400 mx-auto mb-4"></div>
-            <p class="text-white">🔐 Quantum Authentication...</p>
+            <p class="text-white">Quantum Authentication...</p>
         </div>
     </div>
 
