--- a/index.html
+++ b/index.html
@@ -1,44 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Landa Digital Printing – CRS Login</title>
 
-  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+
+  <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
+
+  <!-- p5 for stars -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
 
+  <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
   <style>
     :root {
       --bg-main: #020617;
-      --surface: rgba(15, 23, 42, 0.96);
-      --border: rgba(148, 163, 184, 0.55);
+      --surface: rgba(15, 23, 42, 0.92);
+      --border: rgba(148, 163, 184, 0.45);
       --text-main: #e5e7eb;
       --text-muted: #9ca3af;
       --accent-blue: #2563eb;
       --accent-cyan: #22d3ee;
     }
 
-    body {
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
       font-family: 'Inter', system-ui, sans-serif;
-      background:
-        radial-gradient(circle at 0% 0%, rgba(37,99,235,0.18), transparent 55%),
-        radial-gradient(circle at 100% 0%, rgba(6,182,212,0.18), transparent 55%),
-        var(--bg-main);
+      background: var(--bg-main);
       color: var(--text-main);
-      min-height: 100vh;
+      overflow: hidden;
     }
 
+    /* Canvas (stars) */
+    canvas {
+      position: fixed !important;
+      inset: 0;
+      z-index: 0;
+    }
+
+    /* Page wrapper */
+    .login-page {
+      position: relative;
+      z-index: 2;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      pointer-events: none;
+    }
+
+    .login-wrapper {
+      width: 100%;
+      max-width: 420px;
+      padding: 1rem;
+      pointer-events: all;
+    }
+
+    /* Glass card */
     .glass-card {
       background: var(--surface);
       border: 1px solid var(--border);
       border-radius: 1.25rem;
       backdrop-filter: blur(18px);
       box-shadow: 0 22px 52px rgba(0,0,0,0.6);
+      padding: 2rem;
     }
 
     /* Branding */
@@ -71,8 +103,8 @@
     .select-field {
       width: 100%;
       border-radius: 0.85rem;
-      background: rgba(15,23,42,0.96);
-      border: 1px solid rgba(51,65,85,0.9);
+      background: rgba(15,23,42,0.95);
+      border: 1px solid rgba(51,65,85,0.85);
       padding: 0.6rem 0.85rem;
       font-size: 0.85rem;
       color: #fff;
@@ -86,7 +118,7 @@
 
     /* Button */
     .btn-primary {
-      margin-top: 0.5rem;
+      margin-top: 0.75rem;
       width: 100%;
       padding: 0.65rem;
       font-size: 0.8rem;
@@ -96,69 +128,108 @@
       border-radius: 999px;
       background: linear-gradient(135deg, var(--accent-blue), var(--accent-cyan));
       color: #020617;
-      box-shadow: 0 10px 26px rgba(37,99,235,0.55);
+      box-shadow: 0 10px 26px rgba(37,99,235,0.45);
+      transition: all 0.25s ease;
     }
 
     .btn-primary:hover {
       transform: translateY(-1px);
-      box-shadow: 0 14px 34px rgba(37,99,235,0.7);
+      box-shadow: 0 14px 34px rgba(37,99,235,0.65);
     }
 
+    /* Footer */
     footer {
-      position: absolute;
-      bottom: 18px;
+      position: fixed;
+      bottom: 14px;
+      left: 0;
       width: 100%;
       text-align: center;
       font-size: 0.7rem;
       color: #6b7280;
+      z-index: 1;
+      pointer-events: none;
     }
   </style>
 </head>
 
-<body class="flex items-center justify-center relative">
+<body>
 
-  <div class="w-full max-w-md px-4">
-    <!-- Branding -->
-    <div class="login-brand">
-      <div class="brand-line-1">Landa Digital Printing</div>
-      <div class="brand-line-2">CRS</div>
-      <div class="brand-line-3">Case Resolution Suite</div>
-    </div>
+  <!-- LOGIN -->
+  <div class="login-page">
+    <div class="login-wrapper">
 
-    <!-- Login Card -->
-    <div class="glass-card p-8">
-      <form id="login-form" class="space-y-5">
-        <div>
-          <label class="text-sm mb-1 block">Username</label>
-          <input id="username" class="input-field" type="text" required>
-        </div>
+      <div class="login-brand">
+        <div class="brand-line-1">Landa Digital Printing</div>
+        <div class="brand-line-2">CRS</div>
+        <div class="brand-line-3">Case Resolution Suite</div>
+      </div>
 
-        <div>
-          <label class="text-sm mb-1 block">Password</label>
-          <input id="password" class="input-field" type="password" required>
-        </div>
+      <div class="glass-card">
+        <form id="login-form" class="space-y-5">
+          <div>
+            <label class="text-sm mb-1 block">Username</label>
+            <input id="username" class="input-field" type="text" required />
+          </div>
 
-        <div>
-          <label class="text-sm mb-1 block">Access Level</label>
-          <select id="user-type" class="select-field">
-            <option value="expert">Expert</option>
-            <option value="service">Service Engineer</option>
-            <option value="manager">Manager</option>
-            <option value="rnd">R&amp;D</option>
-          </select>
-        </div>
+          <div>
+            <label class="text-sm mb-1 block">Password</label>
+            <input id="password" class="input-field" type="password" required />
+          </div>
 
-        <button type="submit" class="btn-primary">
-          Access System
-        </button>
-      </form>
+          <div>
+            <label class="text-sm mb-1 block">Access Level</label>
+            <select id="user-type" class="select-field">
+              <option value="expert">Expert</option>
+              <option value="service">Service Engineer</option>
+              <option value="manager">Manager</option>
+              <option value="rnd">R&amp;D</option>
+            </select>
+          </div>
+
+          <button type="submit" class="btn-primary">
+            Access System
+          </button>
+        </form>
+      </div>
+
     </div>
   </div>
 
+  <!-- FOOTER -->
   <footer>
     © 2025 Landa Digital Printing · Nanography® · AI-Powered Support System
   </footer>
 
+  <!-- Stars background -->
+  <script>
+    let stars = [];
+    function setup() {
+      const c = createCanvas(windowWidth, windowHeight);
+      c.parent(document.body);
+      for (let i = 0; i < 180; i++) {
+        stars.push({
+          x: random(width),
+          y: random(height),
+          z: random(0.3, 1)
+        });
+      }
+    }
+
+    function draw() {
+      clear();
+      noStroke();
+      fill(255, 255, 255, 120);
+      for (let s of stars) {
+        circle(s.x, s.y, 2 * s.z);
+      }
+    }
+
+    function windowResized() {
+      resizeCanvas(windowWidth, windowHeight);
+    }
+  </script>
+
+  <!-- Main logic -->
   <script src="main.js"></script>
 </body>
 </html>
