--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
     .select-display::after {
       content: "▾";
       color: var(--accent-cyan);
-      font-size: 0.75rem;
+      font-size: 0.95rem;
+        margin-left: 0.5rem;
     }
 
     .select-options {
