--- a/index.html
+++ b/index.html
@@ -1,282 +1,264 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Landa Digital Printing – CRS Login</title>
 
-  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
   <style>
     :root {
-      --bg-main: #020617;
-      --surface: rgba(15, 23, 42, 0.92);
-      --border: rgba(148, 163, 184, 0.45);
-      --text-main: #e5e7eb;
-      --text-muted: #9ca3af;
-      --accent-blue: #2563eb;
-      --accent-cyan: #22d3ee;
+      --bg: #020617;
+      --glass: rgba(15,23,42,0.92);
+      --border: rgba(148,163,184,0.45);
+      --text: #e5e7eb;
+      --muted: #9ca3af;
+      --blue: #2563eb;
+      --cyan: #22d3ee;
     }
 
-    html, body {
-      height: 100%;
-      margin: 0;
-      font-family: 'Inter', system-ui, sans-serif;
-      background: var(--bg-main);
-      color: var(--text-main);
-      overflow: hidden;
+    html,body{
+      margin:0;
+      height:100%;
+      font-family:Inter,system-ui,sans-serif;
+      background:var(--bg);
+      color:var(--text);
+      overflow:hidden;
     }
 
-    canvas {
-      position: fixed !important;
-      inset: 0;
-      z-index: 0;
+    canvas{
+      position:fixed!important;
+      inset:0;
+      z-index:0;
     }
 
-    .login-page {
-      position: relative;
-      z-index: 2;
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+    .page{
+      position:relative;
+      z-index:2;
+      min-height:100vh;
+      display:flex;
+      align-items:center;
+      justify-content:center;
     }
 
-    .login-wrapper {
-      width: 100%;
-      max-width: 420px;
-      padding: 1rem;
+    .wrap{
+      width:100%;
+      max-width:420px;
+      padding:1rem;
     }
 
-    .glass-card {
-      background: var(--surface);
-      border: 1px solid var(--border);
-      border-radius: 1.25rem;
-      backdrop-filter: blur(18px);
-      box-shadow: 0 22px 52px rgba(0,0,0,0.6);
-      padding: 2rem;
+    .glass{
+      background:var(--glass);
+      border:1px solid var(--border);
+      border-radius:1.25rem;
+      backdrop-filter:blur(18px);
+      box-shadow:0 22px 52px rgba(0,0,0,.6);
+      padding:2rem;
     }
 
-    .login-brand {
-      text-align: center;
-      margin-bottom: 2.2rem;
+    .brand{text-align:center;margin-bottom:2.2rem}
+    .brand h1{font-size:1.85rem;font-weight:600;letter-spacing:.04em}
+    .brand h2{margin-top:.35rem;font-size:1.1rem;letter-spacing:.32em;color:var(--cyan)}
+    .brand p{margin-top:.25rem;font-size:.9rem;color:var(--muted)}
+
+    label{font-size:.85rem;margin-bottom:.25rem;display:block}
+
+    .input{
+      width:100%;
+      background:rgba(15,23,42,.95);
+      border:1px solid rgba(51,65,85,.85);
+      border-radius:.85rem;
+      padding:.6rem .85rem;
+      color:#fff;
+      font-size:.85rem;
     }
 
-    .brand-line-1 {
-      font-size: 1.85rem;
-      font-weight: 600;
-      letter-spacing: 0.04em;
+    .input:focus{outline:none;border-color:var(--blue)}
+
+    /* Custom select */
+    .select{position:relative}
+    .select-head{
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      cursor:pointer;
     }
-
-    .brand-line-2 {
-      margin-top: 0.35rem;
-      font-size: 1.1rem;
-      letter-spacing: 0.32em;
-      color: var(--accent-cyan);
+    .select-head::after{
+      content:"▾";
+      color:var(--cyan);
+      font-size:.95rem;
     }
-
-    .brand-line-3 {
-      margin-top: 0.25rem;
-      font-size: 0.9rem;
-      color: var(--text-muted);
+    .options{
+      position:absolute;
+      top:calc(100% + 6px);
+      left:0;right:0;
+      background:rgba(2,6,23,.96);
+      border:1px solid rgba(51,65,85,.85);
+      border-radius:.85rem;
+      overflow:hidden;
+      display:none;
+      z-index:10;
+      box-shadow:0 18px 40px rgba(0,0,0,.7);
     }
-
-    .input-field {
-      width: 100%;
-      border-radius: 0.85rem;
-      background: rgba(15,23,42,0.95);
-      border: 1px solid rgba(51,65,85,0.85);
-      padding: 0.6rem 0.85rem;
-      font-size: 0.85rem;
-      color: #fff;
+    .options div{
+      padding:.6rem .85rem;
+      font-size:.85rem;
+      cursor:pointer;
     }
+    .options div:hover{background:rgba(37,99,235,.25)}
+    .select.open .options{display:block}
 
-    .input-field:focus {
-      outline: none;
-      border-color: var(--accent-blue);
+    .status{
+      text-align:center;
+      font-size:.85rem;
     }
+    .ok{color:#22c55e}
+    .err{color:#ef4444}
 
-    /* ---------- CUSTOM SELECT ---------- */
-
-    .select-wrapper {
-      position: relative;
+    .btn{
+      margin-top:.9rem;
+      width:100%;
+      padding:.65rem;
+      border-radius:999px;
+      font-size:.8rem;
+      letter-spacing:.16em;
+      font-weight:600;
+      text-transform:uppercase;
+      background:linear-gradient(135deg,var(--blue),var(--cyan));
+      color:#020617;
+      box-shadow:0 10px 26px rgba(37,99,235,.45);
+      transition:.25s;
     }
+    .btn:hover{transform:translateY(-1px);box-shadow:0 14px 34px rgba(37,99,235,.65)}
 
-    .select-display {
-      width: 100%;
-      border-radius: 0.85rem;
-      background: rgba(15,23,42,0.95);
-      border: 1px solid rgba(51,65,85,0.85);
-      padding: 0.6rem 0.85rem;
-      font-size: 0.85rem;
-      cursor: pointer;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .select-display::after {
-      content: "▾";
-      color: var(--accent-cyan);
-      font-size: 0.95rem;
-        margin-left: 0.5rem;
-    }
-
-    .select-options {
-      position: absolute;
-      top: calc(100% + 6px);
-      left: 0;
-      right: 0;
-      background: rgba(2, 6, 23, 0.96);
-      border: 1px solid rgba(51,65,85,0.85);
-      border-radius: 0.85rem;
-      overflow: hidden;
-      display: none;
-      z-index: 10;
-      box-shadow: 0 18px 40px rgba(0,0,0,0.7);
-    }
-
-    .select-options div {
-      padding: 0.6rem 0.85rem;
-      font-size: 0.85rem;
-      cursor: pointer;
-    }
-
-    .select-options div:hover {
-      background: rgba(37,99,235,0.2);
-    }
-
-    .select-wrapper.open .select-options {
-      display: block;
-    }
-
-    /* ---------- BUTTON ---------- */
-
-    .btn-primary {
-      margin-top: 0.9rem;
-      width: 100%;
-      padding: 0.65rem;
-      font-size: 0.8rem;
-      letter-spacing: 0.16em;
-      text-transform: uppercase;
-      font-weight: 600;
-      border-radius: 999px;
-      background: linear-gradient(135deg, var(--accent-blue), var(--accent-cyan));
-      color: #020617;
-      box-shadow: 0 10px 26px rgba(37,99,235,0.45);
-      transition: all 0.25s ease;
-    }
-
-    .btn-primary:hover {
-      transform: translateY(-1px);
-      box-shadow: 0 14px 34px rgba(37,99,235,0.65);
-    }
-
-    footer {
-      position: fixed;
-      bottom: 14px;
-      left: 0;
-      width: 100%;
-      text-align: center;
-      font-size: 0.7rem;
-      color: #6b7280;
-      z-index: 1;
+    footer{
+      position:fixed;
+      bottom:14px;
+      width:100%;
+      text-align:center;
+      font-size:.7rem;
+      color:#6b7280;
+      z-index:1;
     }
   </style>
 </head>
 
 <body>
 
-  <div class="login-page">
-    <div class="login-wrapper">
+<div class="page">
+  <div class="wrap">
 
-      <div class="login-brand">
-        <div class="brand-line-1">Landa Digital Printing</div>
-        <div class="brand-line-2">CRS</div>
-        <div class="brand-line-3">Case Resolution Suite</div>
-      </div>
+    <div class="brand">
+      <h1>Landa Digital Printing</h1>
+      <h2>CRS</h2>
+      <p>Case Resolution Suite</p>
+    </div>
 
-      <div class="glass-card">
-        <form class="space-y-5">
-          <div>
-            <label class="text-sm mb-1 block">Username</label>
-            <input class="input-field" type="text" />
-          </div>
+    <div class="glass">
+      <form id="loginForm" class="space-y-5">
 
-          <div>
-            <label class="text-sm mb-1 block">Password</label>
-            <input class="input-field" type="password" />
-          </div>
+        <div>
+          <label>Username</label>
+          <input id="username" class="input" type="text">
+        </div>
 
-          <div>
-            <label class="text-sm mb-1 block">Access Level</label>
-            <div class="select-wrapper" id="accessSelect">
-              <div class="select-display" id="selectedValue">Expert</div>
-              <div class="select-options">
-                <div data-value="expert">Expert</div>
-                <div data-value="service">Service Engineer</div>
-                <div data-value="manager">Manager</div>
-                <div data-value="rnd">R&amp;D</div>
-              </div>
+        <div>
+          <label>Password</label>
+          <input id="password" class="input" type="password">
+        </div>
+
+        <div>
+          <label>Access Level</label>
+          <div class="select" id="roleSelect">
+            <div class="input select-head" id="roleValue">Expert</div>
+            <div class="options">
+              <div data-role="expert">Expert</div>
+              <div data-role="service">Service Engineer</div>
+              <div data-role="manager">Manager</div>
+              <div data-role="rnd">R&amp;D</div>
             </div>
           </div>
+        </div>
 
-          <button class="btn-primary">Access System</button>
-        </form>
-      </div>
+        <div id="status" class="status hidden"></div>
 
+        <button class="btn">Access System</button>
+
+      </form>
     </div>
+
   </div>
+</div>
 
-  <footer>
-    © 2025 Landa Digital Printing · Nanography® · AI-Powered Support System
-  </footer>
+<footer>
+  © 2025 Landa Digital Printing · Nanography® · AI-Powered Support System
+</footer>
 
-  <!-- Stars -->
-  <script>
-    let stars = [];
-    function setup() {
-      createCanvas(windowWidth, windowHeight);
-      for (let i = 0; i < 220; i++) {
-        stars.push({ x: random(width), y: random(height), z: random(0.4,1.2), s: random(0.2,0.6) });
-      }
-    }
-    function draw() {
-      clear();
-      noStroke();
-      for (let st of stars) {
-        fill(255,255,255,120 * st.z);
-        circle(st.x, st.y, 2.2 * st.z);
-        st.y += st.s * st.z;
-        if (st.y > height) { st.y = 0; st.x = random(width); }
-      }
-    }
-    function windowResized(){ resizeCanvas(windowWidth, windowHeight); }
-  </script>
+<!-- Stars -->
+<script>
+let stars=[];
+function setup(){
+  createCanvas(windowWidth,windowHeight);
+  for(let i=0;i<220;i++)
+    stars.push({x:random(width),y:random(height),z:random(.4,1.2),s:random(.2,.6)});
+}
+function draw(){
+  clear();noStroke();
+  for(let s of stars){
+    fill(255,255,255,120*s.z);
+    circle(s.x,s.y,2.2*s.z);
+    s.y+=s.s*s.z;
+    if(s.y>height){s.y=0;s.x=random(width)}
+  }
+}
+function windowResized(){resizeCanvas(windowWidth,windowHeight)}
+</script>
 
-  <!-- Custom Select Logic -->
-  <script>
-    const wrapper = document.getElementById("accessSelect");
-    const display = document.getElementById("selectedValue");
+<!-- Login logic -->
+<script>
+const form=document.getElementById("loginForm");
+const status=document.getElementById("status");
+const roleSelect=document.getElementById("roleSelect");
+const roleValue=document.getElementById("roleValue");
+let role="expert";
 
-    wrapper.addEventListener("click", () => {
-      wrapper.classList.toggle("open");
-    });
+roleSelect.addEventListener("click",e=>{
+  roleSelect.classList.toggle("open");
+});
+document.querySelectorAll(".options div").forEach(opt=>{
+  opt.onclick=()=>{
+    role=opt.dataset.role;
+    roleValue.textContent=opt.textContent;
+    roleSelect.classList.remove("open");
+  };
+});
+document.addEventListener("click",e=>{
+  if(!roleSelect.contains(e.target))roleSelect.classList.remove("open");
+});
 
-    document.querySelectorAll(".select-options div").forEach(opt => {
-      opt.addEventListener("click", e => {
-        display.textContent = opt.textContent;
-        wrapper.classList.remove("open");
-      });
-    });
+form.onsubmit=e=>{
+  e.preventDefault();
+  const u=username.value.trim();
+  const p=password.value.trim();
+  status.classList.remove("hidden","ok","err");
 
-    document.addEventListener("click", e => {
-      if (!wrapper.contains(e.target)) wrapper.classList.remove("open");
-    });
-  </script>
+  if(!u||!p){
+    status.textContent="Access denied";
+    status.classList.add("err");
+    return;
+  }
+
+  localStorage.setItem("landaUser",JSON.stringify({username:u,role}));
+  status.textContent="Access successful";
+  status.classList.add("ok");
+
+  setTimeout(()=>location.href="dashboard.html",900);
+};
+</script>
 
 </body>
 </html>
