--- a/index.html
+++ b/index.html
@@ -1,126 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Landa Digital Printing – CRS Login</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Landa Digital Printing – CRS Login</title>
 
-  <link rel="icon" type="image/svg+xml" href="favicon.svg">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link rel="icon" type="image/svg+xml" href="favicon.svg">
+<script src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-  <style>
-    :root{
-      --bg:#020617;
-      --glass:rgba(15,23,42,.92);
-      --border:rgba(148,163,184,.45);
-      --text:#e5e7eb;
-      --muted:#9ca3af;
-      --blue:#2563eb;
-      --cyan:#22d3ee;
-      --ok:#22c55e;
-      --err:#ef4444;
-    }
+<style>
+:root{
+  --bg:#020617;
+  --glass:rgba(15,23,42,.92);
+  --border:rgba(148,163,184,.45);
+  --text:#e5e7eb;
+  --muted:#9ca3af;
+  --blue:#2563eb;
+  --cyan:#22d3ee;
+  --ok:#22c55e;
+  --err:#ef4444;
+}
 
-    html,body{
-      margin:0;height:100%;
-      font-family:Inter,system-ui,sans-serif;
-      background:var(--bg);color:var(--text);
-      overflow:hidden;
-    }
+html,body{
+  margin:0;height:100%;
+  font-family:Inter,system-ui,sans-serif;
+  background:var(--bg);color:var(--text);
+  overflow:hidden;
+}
 
-    canvas{position:fixed!important;inset:0;z-index:0}
+canvas{position:fixed!important;inset:0;z-index:0}
 
-    .page{
-      position:relative;z-index:2;
-      min-height:100vh;
-      display:flex;align-items:center;justify-content:center;
-    }
+.page{
+  position:relative;z-index:2;
+  min-height:100vh;
+  display:flex;align-items:center;justify-content:center;
+}
 
-    .wrap{width:100%;max-width:420px;padding:1rem}
+.wrap{width:100%;max-width:420px;padding:1rem}
 
-    .glass{
-      background:var(--glass);
-      border:1px solid var(--border);
-      border-radius:1.25rem;
-      backdrop-filter:blur(18px);
-      box-shadow:0 22px 52px rgba(0,0,0,.6);
-      padding:2rem;
-    }
+.glass{
+  background:var(--glass);
+  border:1px solid var(--border);
+  border-radius:1.25rem;
+  backdrop-filter:blur(18px);
+  box-shadow:0 22px 52px rgba(0,0,0,.6);
+  padding:2rem;
+}
 
-    .brand{text-align:center;margin-bottom:2.2rem}
-    .brand h1{font-size:1.85rem;font-weight:600;letter-spacing:.04em}
-    .brand h2{margin-top:.35rem;font-size:1.1rem;letter-spacing:.32em;color:var(--cyan)}
-    .brand p{margin-top:.25rem;font-size:.9rem;color:var(--muted)}
+.brand{text-align:center;margin-bottom:2.2rem}
+.brand h1{font-size:1.85rem;font-weight:600;letter-spacing:.04em}
+.brand h2{margin-top:.35rem;font-size:1.1rem;letter-spacing:.32em;color:var(--cyan)}
+.brand p{margin-top:.25rem;font-size:.9rem;color:var(--muted)}
 
-    label{font-size:.85rem;margin-bottom:.25rem;display:block}
+label{font-size:.85rem;margin-bottom:.25rem;display:block}
 
-    .input{
-      width:100%;
-      background:rgba(15,23,42,.95);
-      border:1px solid rgba(51,65,85,.85);
-      border-radius:.85rem;
-      padding:.6rem .85rem;
-      color:#fff;font-size:.85rem;
-    }
+.input{
+  width:100%;
+  background:rgba(15,23,42,.95);
+  border:1px solid rgba(51,65,85,.85);
+  border-radius:.85rem;
+  padding:.6rem .85rem;
+  color:#fff;font-size:.85rem;
+}
+.input:focus{outline:none;border-color:var(--blue)}
 
-    .input:focus{outline:none;border-color:var(--blue)}
+.select{position:relative}
+.select-head{
+  display:flex;justify-content:space-between;align-items:center;
+  cursor:pointer;
+}
+.select-head::after{
+  content:"▾";color:var(--cyan);font-size:1rem;
+}
+.options{
+  position:absolute;top:calc(100% + 6px);left:0;right:0;
+  background:rgba(2,6,23,.96);
+  border:1px solid rgba(51,65,85,.85);
+  border-radius:.85rem;
+  overflow:hidden;display:none;z-index:10;
+  box-shadow:0 18px 40px rgba(0,0,0,.7);
+}
+.options div{
+  padding:.6rem .85rem;font-size:.85rem;cursor:pointer;
+}
+.options div:hover{background:rgba(37,99,235,.25)}
+.select.open .options{display:block}
 
-    /* Custom select */
-    .select{position:relative}
-    .select-head{
-      display:flex;justify-content:space-between;align-items:center;
-      cursor:pointer;
-    }
-    .select-head::after{
-      content:"▾";color:var(--cyan);font-size:1rem;
-    }
-    .options{
-      position:absolute;top:calc(100% + 6px);left:0;right:0;
-      background:rgba(2,6,23,.96);
-      border:1px solid rgba(51,65,85,.85);
-      border-radius:.85rem;
-      overflow:hidden;display:none;z-index:10;
-      box-shadow:0 18px 40px rgba(0,0,0,.7);
-    }
-    .options div{
-      padding:.6rem .85rem;font-size:.85rem;cursor:pointer;
-    }
-    .options div:hover{background:rgba(37,99,235,.25)}
-    .select.open .options{display:block}
+.status{
+  margin-top:.5rem;
+  padding:.55rem .8rem;
+  border-radius:.75rem;
+  font-size:.8rem;
+  text-align:center;
+  backdrop-filter:blur(8px);
+}
+.status.ok{
+  color:var(--ok);
+  background:rgba(34,197,94,.12);
+  border:1px solid rgba(34,197,94,.35);
+}
+.status.err{
+  color:var(--err);
+  background:rgba(239,68,68,.12);
+  border:1px solid rgba(239,68,68,.35);
+}
+.hidden{display:none}
 
-    .btn{
-      margin-top:1rem;width:100%;
-      padding:.65rem;border-radius:999px;
-      font-size:.8rem;letter-spacing:.16em;
-      font-weight:600;text-transform:uppercase;
-      background:linear-gradient(135deg,var(--blue),var(--cyan));
-      color:#020617;
-      box-shadow:0 10px 26px rgba(37,99,235,.45);
-      transition:.25s;
-    }
-    .btn:hover{transform:translateY(-1px);box-shadow:0 14px 34px rgba(37,99,235,.65)}
+.btn{
+  margin-top:1rem;width:100%;
+  padding:.65rem;border-radius:999px;
+  font-size:.8rem;letter-spacing:.16em;
+  font-weight:600;text-transform:uppercase;
+  background:linear-gradient(135deg,var(--blue),var(--cyan));
+  color:#020617;
+  box-shadow:0 10px 26px rgba(37,99,235,.45);
+  transition:.25s;
+}
+.btn:hover{transform:translateY(-1px);box-shadow:0 14px 34px rgba(37,99,235,.65)}
 
-    footer{
-      position:fixed;bottom:14px;width:100%;
-      text-align:center;font-size:.7rem;color:#6b7280;z-index:1;
-    }
-
-    /* Toast */
-    .toast{
-      position:fixed;right:24px;top:24px;
-      padding:.8rem 1.1rem;
-      border-radius:.85rem;
-      font-size:.85rem;
-      box-shadow:0 12px 30px rgba(0,0,0,.6);
-      opacity:0;transform:translateY(-10px);
-      transition:.3s;z-index:20;
-    }
-    .toast.show{opacity:1;transform:translateY(0)}
-    .toast.ok{background:rgba(34,197,94,.15);color:var(--ok);border:1px solid rgba(34,197,94,.4)}
-    .toast.err{background:rgba(239,68,68,.15);color:var(--err);border:1px solid rgba(239,68,68,.4)}
-  </style>
+footer{
+  position:fixed;bottom:14px;width:100%;
+  text-align:center;font-size:.7rem;color:#6b7280;z-index:1;
+}
+</style>
 </head>
 
 <body>
@@ -159,8 +163,11 @@
             </div>
           </div>
         </div>
-<div id="login-status" class="login-status hidden"></div>
+
+        <div id="login-status" class="status hidden"></div>
+
         <button class="btn">Access System</button>
+
       </form>
     </div>
 
@@ -168,12 +175,9 @@
 </div>
 
 <footer>
-  © 2025 Landa Digital Printing · Nanography® · AI-Powered Support System
+© 2025 Landa Digital Printing · Nanography® · AI-Powered Support System
 </footer>
 
-<div id="toast" class="toast"></div>
-
-<!-- Stars -->
 <script>
 let stars=[];
 function setup(){
@@ -193,52 +197,42 @@ function draw(){
 function windowResized(){resizeCanvas(windowWidth,windowHeight)}
 </script>
 
-<!-- Logic -->
 <script>
-const form=document.getElementById("Form");
-const toast=document.getElementById("toast");
+const form=document.getElementById("loginForm");
+const statusEl=document.getElementById("login-status");
 const roleSelect=document.getElementById("roleSelect");
 const roleValue=document.getElementById("roleValue");
 let role="expert";
 
-/* select logic */
-roleSelect.addEventListener("click",e=>{
-  roleSelect.classList.toggle("open");
-});
+/* select */
+roleSelect.addEventListener("click",()=>roleSelect.classList.toggle("open"));
 document.querySelectorAll(".options div").forEach(opt=>{
-  opt.onclick=(e)=>{
-    e.stopPropagation();              // 👈 זה התיקון
-    role = opt.dataset.role;
-    roleValue.textContent = opt.textContent;
+  opt.addEventListener("click",e=>{
+    e.stopPropagation();
+    role=opt.dataset.role;
+    roleValue.textContent=opt.textContent;
     roleSelect.classList.remove("open");
-  };
+  });
 });
 document.addEventListener("click",e=>{
   if(!roleSelect.contains(e.target))roleSelect.classList.remove("open");
 });
 
-/* toast */
-function showToast(msg,type){
-  toast.textContent=msg;
-  toast.className=`toast show ${type}`;
-  setTimeout(()=>toast.classList.remove("show"),2500);
-}
-
-/*  */
-form.onsubmit=e=>{
+/* login */
+form.addEventListener("submit",e=>{
   e.preventDefault();
+  statusEl.classList.remove("hidden","ok","err");
 
-  const u=username.value.trim();
-  const p=password.value.trim();
-
-  if(u==="Expert" && p==="Landa123456"){
-    showToast("Access successful","ok");
-    localStorage.setItem("landaUser",JSON.stringify({username:u,role}));
-    setTimeout(()=>location.href="dashboard.html",1200);
+  if(username.value==="Expert" && password.value==="Landa123456"){
+    statusEl.textContent="Access successful";
+    statusEl.classList.add("ok");
+    localStorage.setItem("landaUser",JSON.stringify({username:"Expert",role}));
+    setTimeout(()=>location.href="dashboard.html",900);
   }else{
-    showToast("Access denied","err");
+    statusEl.textContent="Access denied";
+    statusEl.classList.add("err");
   }
-};
+});
 </script>
 
 </body>
